exercises/calico/ingress/calico/ingress-104-allow-kube-public.yaml
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: ingress-allow-dns-kube-public
  namespace: kube-public
spec:
  order: 104
  selector: all()
  types:
    - Ingress
  ingress:
    - action: Allow
      source:
        namespaceSelector: projectcalico.org/name in { 'kube-public' }
